--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "sass": "^1.66.1",
     "typescript": "5.2.2"
   }
